--- a/index.html
+++ b/index.html
@@ -6,17 +6,43 @@
   <meta name="viewport" content="width=device-width">
   <title>Mijn Website</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <link href="DVeiligheid" />
   </head>
 
   <body>
     <div id="wrapper">
-      <header></header>
-      <nav><a href="DVeiligheid" target="_self"> www.w3schools.com </a></nav>
-      <article id="hoofd"></article>
+      <header>
+        <h1>Security</h1>
+        <p>Alles makkelijk op één plek</p>
+      </header>
+      <nav>
+        <a href="index.html">Home</a> <br> <br>
+        <a href="DVeiligheid">Digitale Veiligheid</a> <br> <br>
+        <a href="bedreigingen.html">Bedreigingen</a> <br> <br>
+        <a href="AanvalVerdedigers.html">Aanvallers en verdedigers</a> <br> <br>
+        <a href="Maatregelen">Maatregelen</a> <br> <br>
+      </nav>
+      <article id="hoofd">
+        <h1>Welkom!</h1>
+        <p>Het internet is een vrij nieuw concept en we weten er weinig van maar tegelijkertijd ook heel veel. En zijn er hackers waar je jezelf
+        voor moet beschermen. Ze kunnen je je persoonlijke gegevens jatten en verkeerd gebruiken. Je moet letten op waar en wanneer je je gegevens invullt en of het
+        wel betrouwbaar is. Je moet door de hackers heen kijken en weten wanneer het nep is. Als je gegevens ergens terecht komen wat niet
+        je bedoeling was kan dit al snel erg mis gaan, daarom is het juist zo belangrijk dat mensen hier geinformeert over zijn. Je kunt hiervoor overal op het internet dingen vinden die hier over gaan.
+        Maar hier hebben we alles makkelijk en snel voor je opgesomt en kan je overal makkelijk bij komen. Van welke maatregelen je kan nemen tot
+        hoe de hackers zelf aan de slag gaan. <br> <br>
+        Alle onderwerpen zijn makkelijk te vinden aan de linkerzijde van de pagina. Ook zijn dingen verduidelijkt door plaatjes en voorbeelden.
+        Daarnaast kan je makkelijk ergens doorheen scrollen als je een bepaald onderwerp zoekt. <br>
+        We willen iedereen informeren over hoe belangrijk digitale veiligheid is en hebben we daarom deze site voor jullie gemaakt.
+        </p>
+      </article>
       <article id="extra"></article>
       <article id="png"></article>
-      <footer></footer>
+      <footer>
+        <h1>Ons bereiken?</h1>
+        <p>
+          135197@stanislascollege.net / 135965@stanislascollege.net <br>
+          Nyaz Mousa en Amber Hoefnagel
+        </p> 
+      </footer>
     </div>
 
   </body>
