--- a/AanvalVerdedigers.html
+++ b/AanvalVerdedigers.html
@@ -13,14 +13,16 @@
       <header>
         <h1>Security</h1>
         <p>Alles makkelijk op één plek</p>
-        <img s
-      </header>
+        </header>
+      
       <nav>
         <a href="index.html">Home</a> <br> <br>
         <a href="DVeiligheid">Digitale Veiligheid</a> <br> <br>
         <a href="bedreigingen.html">Bedreigingen</a> <br> <br>
+        <a href="technieken.html">Technieken</a> <br> <br>
         <a href="AanvalVerdedigers.html">Aanvallers en verdedigers</a> <br> <br>
         <a href="Maatregelen">Maatregelen</a> <br> <br>
+        <a href="Zelfdoen.html">Wat zelf te doen?</a> 
       </nav>
       <article id="hoofd">
         <h1>Aanvallers en verdedigers</h1>
@@ -36,7 +38,7 @@
           <h2>Computervredebreuk</h2>
           <p>Computervredebreuk is het ongeoorloofd binnendringen in een computersysteem of netwerk, ongeacht de methode. Zelfs een mislukte poging tot hacken is strafbaar. Ook het bezitten van hack hulpmiddelen is verboden, al is het moeilijk te bewijzen waarvoor ze zijn bedoeld. Een slecht beveiligde website is geen excuus om te hacken. Het melden van beveiligingslekken is wel toegestaan. Na een inbraak ben je schuldig aan computervredebreuk, zelfs als je niets doet, en als je later schade aanricht, is dat extra strafbaar.
           </p> <br>
-          <h2>Etnisch hacken</h2>
+          <h2>Ethisch hacken</h2>
           <p>Er zijn echter ethische hackers die het internet veiliger maken. Zij melden beveiligingslekken bij bedrijven, zodat deze de gaten kunnen dichten. Bedrijven waarderen deze meldingen vaak en belonen de hacker. Er zijn bedrijven die beveiligingsproblemen niet of niet snel oplossen als ze gemeld worden, wat gevaarlijk is voor gebruikers. Soms is het verstandig om een lek openbaar te maken om gebruikers te waarschuwen. Veel hackers kiezen voor responsible disclosure: ze melden eerst het lek en maken het later openbaar.
           </p> <br>
       </article>
@@ -47,8 +49,9 @@
       <footer>
         <h1>Ons bereiken?</h1>
         <p>
-          135197@stanislascollege.net / 135965@stanislascollege.net <br>
-          Nyaz Mousa en Amber Hoefnagel
+          135965@stanislascollege.net / 135197@stanislascollege.net <br>
+          Amber Hoefnagel en Nyaz Mousa
+          
         </p> 
       </footer>
     </div>
