--- a/AanvalVerdedigers2.html
+++ b/AanvalVerdedigers2.html
@@ -18,8 +18,10 @@
         <a href="index.html">Home</a> <br> <br>
         <a href="DVeiligheid">Digitale Veiligheid</a> <br> <br>
         <a href="bedreigingen.html">Bedreigingen</a> <br> <br>
+        <a href="technieken.html">Technieken</a> <br> <br>
         <a href="AanvalVerdedigers.html">Aanvallers en verdedigers</a> <br> <br>
         <a href="Maatregelen">Maatregelen</a> <br> <br>
+        <a href="Zelfdoen.html">Wat zelf te doen?</a> 
       </nav>
       <article id="hoofd">
         <h1>Aanvallers en verdedigers</h1>
@@ -30,7 +32,8 @@
         <h2>Spionage & oorlogsvoering</h2>
         <p>Ze kunnen worden gezien als wapens in de digitale oorlogsvoering en de verkoop ervan als wapenhandel, omdat ze gebruikt kunnen worden voor aanvallen, gegevensdiefstal en het platleggen van systemen. Criminelen zijn geïnteresseerd, maar ook beveiligingsbedrijven kopen ze om kwetsbaarheden te dichten, vaak na een jaar. 
             Ook overheden maken gebruik van zero days om te spioneren en waardevolle informatie te verzamelen door vijandige systemen te hacken. Een vraag is of overheden kwetsbaarheden niet beter bij ontwikkelaars moeten melden. Het gebruik van zero days blijft omstreden. In Nederland mag dat onder strikte voorwaarden.
-        </p>
+        </p> <br>
+        <img src="Ethical-Hacker_Teaser1 (1).jpg" width="400" height="275">
       </article>
       <article id="onderbalk">
         <a href="AanvalVerdedigers.html">vorige pagina</a>
@@ -39,8 +42,8 @@
       <footer>
         <h1>Ons bereiken?</h1>
         <p>
-          135197@stanislascollege.net / 135965@stanislascollege.net <br>
-          Nyaz Mousa en Amber Hoefnagel
+          135965@stanislascollege.net / 135197@stanislascollege.net<br>
+          Amber Hoefnagel en Nyaz Mousa
         </p> 
       </footer>
     </div>
