--- a/Bedreigingen2.html
+++ b/Bedreigingen2.html
@@ -18,8 +18,10 @@
         <a href="index.html">Home</a> <br> <br>
         <a href="DVeiligheid">Digitale Veiligheid</a> <br> <br>
         <a href="bedreigingen.html">Bedreigingen</a> <br> <br>
+        <a href="technieken.html">Technieken</a> <br> <br>
         <a href="AanvalVerdedigers.html">Aanvallers en verdedigers</a> <br> <br>
         <a href="Maatregelen">Maatregelen</a> <br> <br>
+        <a href="Zelfdoen.html">Wat zelf te doen?</a> 
       </nav>
       <article id="hoofd">
         <h1>Bedreigingen</h1>
@@ -33,6 +35,9 @@
         <p>Voor elke website een ander wachtwoord van minimaal 12 tekens onthouden is moeilijk. Gebruik een password manager om al je wachtwoorden veilig op te slaan. Je onthoudt slechts één moeilijk wachtwoord. De password manager kan op je smartphone en in je browser worden geïnstalleerd. 
             Bij inloggen vult deze automatisch je gegevens in. Bij het aanmaken van een nieuw account kan je een sterk wachtwoord laten kiezen. Je kunt ook iemand die je vertrouwt toegang geven tot je password manager.
         </p> <br>
+        <img src="E2E-Encryption-blog-removebg-preview.png" width="300" height="175">
+        <img src="image-removebg-preview.png" width="300" height="175"; float: right;>
+        <img src="1699356645941-Photoroom-removebg-preview.png" width="300" height="200" style="position: relative; left: 10%; top: 5%;">
       <article id="onderbalk">
         <a href="bedreigingen.html">vorige pagina</a>
       </article>
@@ -40,8 +45,8 @@
       <footer>
         <h1>Ons bereiken?</h1>
         <p>
-          135197@stanislascollege.net / 135965@stanislascollege.net <br>
-          Nyaz Mousa en Amber Hoefnagel
+          135965@stanislascollege.net / 135197@stanislascollege.net <br>
+          Amber Hoefnagel en Nyaz Mousa
         </p> 
       </footer>
     </div>
