--- a/DVeiligheid.html
+++ b/DVeiligheid.html
@@ -18,14 +18,16 @@
         <a href="index.html">Home</a> <br> <br>
         <a href="DVeiligheid">Digitale Veiligheid</a> <br> <br>
         <a href="bedreigingen.html">Bedreigingen</a> <br> <br>
+        <a href="technieken.html">Technieken</a> <br> <br>
         <a href="AanvalVerdedigers.html">Aanvallers en verdedigers</a> <br> <br>
         <a href="Maatregelen">Maatregelen</a> <br> <br>
+        <a href="Zelfdoen.html">Wat zelf te doen?</a> 
       </nav>
       <article id="hoofd">
         <h1>Digitale veiligheid</h1>
         <p>Digitale technologieën veranderen onze maatschappij en beïnvloeden ons leven. Dagelijks ontstaan nieuwe manieren om te werken, ontspannen en contact te hebben. Iedereen heeft een eigen digitale identiteit, bijvoorbeeld via social media of bank accounts. 
           Digitale beveiliging beschermt deze gegevens tegen criminelen, hackers, overheden en zelfs vrienden. Het is belangrijk dat iedereen die met digitale gegevens werkt, de veiligheid ervan waarborgt. Jij kunt ook bijdragen door sterke wachtwoorden en beveiligingsmethoden 
-          zoals pincode of vingerafdruk te gebruiken.</p> <br>
+          zoals pincode of vingerafdruk te gebruiken.</p> <br>  
         <h2>Vertrouwelijkheid</h2>
         <p>Voordat iemand toegang krijgt tot persoonlijke gegevens, moet er een controle plaatsvinden om te bepalen of de gebruiker dat ook mag. Dit heet authenticatie. 
             Authenticatie kan op verschillende manieren, zoals iets dat je weet (wachtwoord of pincode), iets dat je hebt (sleutel of pas), of iets dat je bent (vingerafdruk of iris). Daarnaast worden de termen identificatie en verificatie ook gebruikt. Identificatie vraagt: “Wie ben je?" " en 
@@ -55,8 +57,8 @@
       <footer>
         <h1>Ons bereiken?</h1>
         <p>
-          135197@stanislascollege.net / 135965@stanislascollege.net <br>
-          Nyaz Mousa en Amber Hoefnagel
+          135965@stanislascollege.net / 135197@stanislascollege.net <br>
+          Amber Hoefnagel en Nyaz Mousa
         </p> 
       </footer>
     </div>
