--- a/DVeiligheid2.html
+++ b/DVeiligheid2.html
@@ -18,8 +18,10 @@
         <a href="index.html">Home</a> <br> <br>
         <a href="DVeiligheid">Digitale Veiligheid</a> <br> <br>
         <a href="bedreigingen.html">Bedreigingen</a> <br> <br>
+        <a href="technieken.html">Technieken</a> <br> <br>
         <a href="AanvalVerdedigers.html">Aanvallers en verdedigers</a> <br> <br>
         <a href="Maatregelen">Maatregelen</a> <br> <br>
+        <a href="Zelfdoen.html">Wat zelf te doen?</a> 
       </nav>
       <article id="hoofd">
         <h1>Digitale veiligheid</h1>
@@ -38,6 +40,8 @@
             ziekenhuizen of het onbereikbaar maken van banken voor rekeninghouders. 
             Er zijn manieren om DDoS-aanvallen te bestrijden, zoals het filteren van verkeer naar een website. Alleen goedgekeurd verkeer wordt doorgelaten, en ongewenst verkeer kan worden omgeleid naar een anti-DDoS-dienst. Deze dienst controleert het verkeer en laat alleen legitiem verkeer door.
         </p>
+        <img src="modern-cybersecurity-technology-background-with-padlock-vector.jpg" width="300" height="175" style="position: relative; left: 1%; top: 2%;">
+        <img src="iban-nummer-voorbeeld-900x320-removebg-preview.png" width="300" height="175" style="position: relative; margin-right: 6%; top: 2%; float: right;"> 
       </article>
       <article id="onderbalk">
         <a href="DVeiligheid.html">Vorige pagina</a>
@@ -48,8 +52,8 @@
       <footer>
         <h1>Ons bereiken?</h1>
         <p>
-          135197@stanislascollege.net / 135965@stanislascollege.net <br>
-          Nyaz Mousa en Amber Hoefnagel
+          135965@stanislascollege.net / 135197@stanislascollege.net <br>
+          Amber Hoefnagel en Nyaz Mousa
         </p> 
       </footer>
     </div>
