--- a/Maatregelen.html
+++ b/Maatregelen.html
@@ -18,17 +18,38 @@
         <a href="index.html">Home</a> <br> <br>
         <a href="DVeiligheid">Digitale Veiligheid</a> <br> <br>
         <a href="bedreigingen.html">Bedreigingen</a> <br> <br>
+        <a href="technieken.html">Technieken</a> <br> <br>
         <a href="AanvalVerdedigers.html">Aanvallers en verdedigers</a> <br> <br>
         <a href="Maatregelen">Maatregelen</a> <br> <br>
+        <a href="Zelfdoen.html">Wat zelf te doen?</a> 
       </nav>
-      <article id="hoofd"></article>
-      <article id="extra"></article>
+      <article id="hoofd">
+        <h1>Maatregelen</h1>
+        <p>Om de veiligheid van ICT-systemen te waarborgen, zijn verschillende partijen nodig, zoals cybersecurity bedrijven, de overheid, software ontwikkelaars en gebruikers. Er zijn vier soorten maatregelen: preventie, detectie, repressie en correctie. 
+        </p> <br>
+        <h2>Preventie</h2>
+        <p>Preventieve beveiligingsmaatregelen zijn bedoeld om problemen te voorkomen. Dit begint bij de beveiliging van hard- en software, die veilig moet zijn en up-to-date moet blijven. Softwareontwikkelaars moeten weten hoe ze goed beveiligde software maken. Goed ontworpen en onderhouden systemen hebben minder kwetsbaarheden, waardoor indringers minder kans krijgen. Gebruikers moeten wel eenvoudig toegang hebben, wat goede authenticatie vereist, en alleen noodzakelijke toegang moet worden toegestaan. Elke nieuwe toegang kan zwakheden met zich meebrengen. Encryptie van gegevens is ook belangrijk, zodat versleutelde data moeilijk te ontsleutelen is. Back-ups zijn een noodzakelijke stap tegen gegevensverlies. Bij de verwerking van persoonsgegevens zijn bedrijven wettelijk verplicht om deze te beschermen volgens de Europese privacywetgeving. Ze moeten uitleggen hoe ze dat doen, zodat gebruikers hun gegevens veilig kunnen bewaren.
+        </p> <br>
+        <h2>Detectie</h2>
+        <p>Helaas is software niet perfect en zullen er kwetsbaarheden zijn die misbruikt kunnen worden. Detectie is nodig, zoals het bijhouden van inlogpogingen van een gebruikersnaam. Bij te veel pogingen kan de gebruiker worden geblokkeerd. Hiervoor worden gegevens over het gebruik van het systeem gelogd. 
+          Een belangrijk hulpmiddel is de firewall, die al het binnenkomende netwerkverkeer scant op kwaadaardige gegevens en controleert of het verkeer van een vertrouwde bron komt. Firewalls beschermen tegen hackers, malware en spam.
+        </p> <br>
+        <h2>Repressie & correctie</h2>
+        <p>Als er een aanval is of malware is aangetroffen, moeten er maatregelen worden genomen (repressie) en moet de schade worden hersteld (correctie). Welke maatregelen nodig zijn, hangt af van het type aanval. 
+          Bij malware op een apparaat kan anti-malware software volstaan. Een zwakke DDoS-aanval kan zorgen voor een tragere website. Bij serverproblemen door schade of hacks kan worden overgeschakeld op een back-up. Beveiligingslekken moeten snel worden hersteld. 
+          Bij ernstige problemen kunnen systemen uitvallen om dataverlies te voorkomen, wat vaak financiële schade met zich meebrengt.
+        </p> <br>
+        <h2></h2>
+      </article>
+      <article id="onderbalk">
+        <a href="Maatregelen2.html">volgende pagina</a>
+      </article>
       <article id="png"></article>
       <footer>
         <h1>Ons bereiken?</h1>
         <p>
-          135197@stanislascollege.net / 135965@stanislascollege.net <br>
-          Nyaz Mousa en Amber Hoefnagel
+          135965@stanislascollege.net / 135197@stanislascollege.net <br>
+          Amber Hoefnagel en Nyaz Mousa
         </p> 
       </footer>
     </div>
