--- a/bedreigingen.html
+++ b/bedreigingen.html
@@ -18,8 +18,10 @@
         <a href="index.html">Home</a> <br> <br>
         <a href="DVeiligheid">Digitale Veiligheid</a> <br> <br>
         <a href="bedreigingen.html">Bedreigingen</a> <br> <br>
+        <a href="technieken.html">Technieken</a> <br> <br>
         <a href="AanvalVerdedigers.html">Aanvallers en verdedigers</a> <br> <br>
         <a href="Maatregelen">Maatregelen</a> <br> <br>
+        <a href="Zelfdoen.html">Wat zelf te doen?</a> 
       </nav>
       <article id="hoofd">
         <h1>Bedreigingen</h1>
@@ -52,8 +54,8 @@
       <footer>
         <h1>Ons bereiken?</h1>
         <p>
-          135197@stanislascollege.net / 135965@stanislascollege.net <br>
-          Nyaz Mousa en Amber Hoefnagel
+          135965@stanislascollege.net / 135197@stanislascollege.net <br>
+          Amber Hoefnagel en Nyaz Mousa
         </p> 
       </footer>
     </div>
