--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
       <header>
         <h1>Security</h1>
         <p>Alles makkelijk op één plek</p>
+        
       </header>
       <nav>
         <a href="index.html">Home</a> <br> <br>
         <a href="DVeiligheid">Digitale Veiligheid</a> <br> <br>
         <a href="bedreigingen.html">Bedreigingen</a> <br> <br>
+        <a href="technieken.html">Technieken</a> <br> <br>
         <a href="AanvalVerdedigers.html">Aanvallers en verdedigers</a> <br> <br>
         <a href="Maatregelen">Maatregelen</a> <br> <br>
+        <a href="Zelfdoen.html">Wat zelf te doen?</a> 
       </nav>
       <article id="hoofd">
         <h1>Welkom!</h1>
@@ -33,14 +36,13 @@
         Daarnaast kan je makkelijk ergens doorheen scrollen als je een bepaald onderwerp zoekt. <br>
         We willen iedereen informeren over hoe belangrijk digitale veiligheid is en hebben we daarom deze site voor jullie gemaakt.
         </p>
+        <img src="image1-removebg-preview (2).png" width="550" height="375" style="position: relative; left: 20%; bottom: 6%;">
       </article>
-      <article id="extra"></article>
-      <article id="png"></article>
       <footer>
         <h1>Ons bereiken?</h1>
         <p>
-          135197@stanislascollege.net / 135965@stanislascollege.net <br>
-          Nyaz Mousa en Amber Hoefnagel
+          135965@stanislascollege.net / 135197@stanislascollege.net <br>
+          Amber Hoefnagel en Nyaz Mousa
         </p> 
       </footer>
     </div>
