Helemaal af en gecheckt

--- a/Bedreigingen2.html
+++ b/Bedreigingen2.html
@@ -38,6 +38,7 @@
         <img src="E2E-Encryption-blog-removebg-preview.png" width="300" height="175">
         <img src="image-removebg-preview.png" width="300" height="175"; float: right;>
         <img src="1699356645941-Photoroom-removebg-preview.png" width="300" height="200" style="position: relative; left: 10%; top: 5%;">
+        </article>
       <article id="onderbalk">
         <a href="bedreigingen.html">vorige pagina</a>
       </article>
